Add Authentik-based identity module and wiring
Introduces the AllSpice.CleanModularMonolith.Identity service with endpoints, domain, persistence, and Authentik integration for module role assignments. Updates authentication in ApiGateway to use Authentik portals, replaces Entra config with Authentik in appsettings and AppHost, and adds shared identity abstractions. Updates README and solution files to reflect Authentik as the identity provider and new module structure.

--- a/AllSpice.CleanModularMonolith.ApiGateway/appsettings.json
+++ b/AllSpice.CleanModularMonolith.ApiGateway/appsettings.json
@@ -103,6 +103,18 @@
         }
       }
     }
+  },
+  "Authentik": {
+    "Portals": {
+      "Erp": {
+        "Authority": "https://auth.example.com/application/o/erp/",
+        "Audience": "erp-client-id"
+      },
+      "Public": {
+        "Authority": "https://auth.example.com/application/o/public/",
+        "Audience": "public-client-id"
+      }
+    }
   }
 }
 
