--- a/AllSpice.CleanModularMonolith.AppHost/appsettings.json
+++ b/AllSpice.CleanModularMonolith.AppHost/appsettings.json
@@ -14,9 +14,26 @@
     "WebOrigin": "http://localhost:5173",
     "MobileOrigin": "http://localhost:5174"
   },
-  "EntraExternalID": {
-    "Authority": "https://your-tenant.b2clogin.com/your-tenant.onmicrosoft.com/B2C_1_signupsignin",
-    "Audience": "your-client-id"
+  "Authentik": {
+    "Portals": {
+      "Erp": {
+        "Authority": "https://auth.example.com/application/o/erp/",
+        "Audience": "erp-client-id"
+      },
+      "Public": {
+        "Authority": "https://auth.example.com/application/o/public/",
+        "Audience": "public-client-id"
+      }
+    }
+  },
+  "Identity": {
+    "Authentik": {
+      "BaseUrl": "https://auth.example.com",
+      "ApiToken": "",
+      "UserLookupTemplate": "/api/v3/core/users/{0}/",
+      "InvitationEndpoint": "/api/v3/flows/executor/invite/",
+      "AllowUntrustedCertificates": false
+    }
   },
   "Notifications": {
     "Sinch": {
