Refactor usings and add global usings files
Moved using directives to new GlobalUsings.cs files in ApiGateway, Identity, and Notifications projects to simplify code and improve maintainability. Updated appsettings.json and AppHost.cs to support new configuration parameters. Changed IdentityPortalOptions properties from init-only to settable for better configuration flexibility. Added MediatorConfiguration files to set Mediator service lifetime.

--- a/AllSpice.CleanModularMonolith.ApiGateway/AllSpice.CleanModularMonolith.ApiGateway.csproj
+++ b/AllSpice.CleanModularMonolith.ApiGateway/AllSpice.CleanModularMonolith.ApiGateway.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ServiceDefaults\AllSpice.CleanModularMonolith.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Services\AllSpice.CleanModularMonolith.Notifications\AllSpice.CleanModularMonolith.Notifications.csproj" />
     <ProjectReference Include="..\Shared\AllSpice.CleanModularMonolith.RealTime\AllSpice.CleanModularMonolith.RealTime.csproj" />
+    <ProjectReference Include="..\Shared\AllSpice.CleanModularMonolith.Identity.Abstractions\AllSpice.CleanModularMonolith.Identity.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
