--- a/AllSpice.CleanModularMonolith.AppHost/appsettings.json
+++ b/AllSpice.CleanModularMonolith.AppHost/appsettings.json
@@ -8,7 +8,14 @@
   },
   "Parameters": {
     "postgres-user": "postgres",
-    "postgres-password": "pass!"
+    "postgres-password": "pass!",
+    "sinch-project-id": "",
+    "sinch-api-key": "",
+    "sinch-service-plan-id": "",
+    "sinch-from-number": "",
+    "authentik-secret-key": "local-secret-key",
+    "authentik-bootstrap-password": "P@ssword1234!",
+    "authentik-db-password": "authentik-db-pass"
   },
   "Cors": {
     "WebOrigin": "http://localhost:5173",
