Refactor Authentik setup and simplify DB initialization
Updated Authentik container configuration to use configurable image and tag, added worker container, and improved environment variable handling. Removed custom database creation retry logic from Identity and Notifications modules, now relying on EnsureCreatedAsync directly. Updated appsettings.json and README to reflect new Authentik configuration options.

--- a/AllSpice.CleanModularMonolith.AppHost/appsettings.json
+++ b/AllSpice.CleanModularMonolith.AppHost/appsettings.json
@@ -15,13 +15,17 @@
     "sinch-from-number": "",
     "authentik-secret-key": "local-secret-key",
     "authentik-bootstrap-password": "P@ssword1234!",
-    "authentik-db-password": "authentik-db-pass"
+    "authentik-db-password": "authentik-db-pass",
+    "authentik-db-user": "authentik",
+    "authentik-db-name": "authentik"
   },
   "Cors": {
     "WebOrigin": "http://localhost:5173",
     "MobileOrigin": "http://localhost:5174"
   },
   "Authentik": {
+    "Image": "ghcr.io/goauthentik/server",
+    "Tag": "2025.10.1",
     "Portals": {
       "Erp": {
         "Authority": "https://auth.example.com/application/o/erp/",
