--- a/Services/AllSpice.CleanModularMonolith.Notifications/AllSpice.CleanModularMonolith.Notifications.csproj
+++ b/Services/AllSpice.CleanModularMonolith.Notifications/AllSpice.CleanModularMonolith.Notifications.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="MailKit" />
     <PackageReference Include="MassTransit" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" />
     <PackageReference Include="Mediator.Abstractions" />
     <PackageReference Include="Mediator.SourceGenerator">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
