Enhance API Gateway with FastEndpoints Swagger and conditional auth
Added FastEndpoints.Swagger package and integrated Swagger UI for development environments. Authentication and authorization are now conditionally configured based on environment variables, with a new GatewayAuthenticationState record to track state. Updated appsettings.json for local Authentik configuration. Added null guards to command handlers for improved safety.

--- a/AllSpice.CleanModularMonolith.ApiGateway/AllSpice.CleanModularMonolith.ApiGateway.csproj
+++ b/AllSpice.CleanModularMonolith.ApiGateway/AllSpice.CleanModularMonolith.ApiGateway.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.AspNetCore.OutputCaching.StackExchangeRedis" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    <PackageReference Include="FastEndpoints.Swagger" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <PackageReference Include="Serilog.AspNetCore" />
     <PackageReference Include="Serilog.Sinks.Console" />
