Add Authentik user sync job and health checks
Introduces scheduled Authentik user synchronization using Quartz, with new entities and persistence for sync history, orphan users, and issues. Adds health checks for Authentik connectivity, orphan user detection, and sync job freshness. Updates configuration, DI setup, and project dependencies to support these features.

--- a/AllSpice.CleanModularMonolith.ApiGateway/appsettings.json
+++ b/AllSpice.CleanModularMonolith.ApiGateway/appsettings.json
@@ -118,6 +118,13 @@
         "Audience": "public-client-id"
       }
     }
+  },
+  "Identity": {
+    "Sync": {
+      "CronExpression": "0 0/15 * * * ?",
+      "PageSize": 100,
+      "MaxSuccessAge": "00:30:00"
+    }
   }
 }
 
