--- a/AllSpice.CleanModularMonolith.AppHost/appsettings.json
+++ b/AllSpice.CleanModularMonolith.AppHost/appsettings.json
@@ -45,6 +45,11 @@
       "UserLookupTemplate": "/api/v3/core/users/{0}/",
       "InvitationEndpoint": "/api/v3/flows/executor/invite/",
       "AllowUntrustedCertificates": false
+    },
+    "Sync": {
+      "CronExpression": "0 0/15 * * * ?",
+      "PageSize": 100,
+      "MaxSuccessAge": "00:30:00"
     }
   },
   "Notifications": {
