--- a/Services/AllSpice.CleanModularMonolith.Identity/AllSpice.CleanModularMonolith.Identity.csproj
+++ b/Services/AllSpice.CleanModularMonolith.Identity/AllSpice.CleanModularMonolith.Identity.csproj
@@ -32,6 +32,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="Quartz" />
+    <PackageReference Include="Quartz.Extensions.Hosting" />
   </ItemGroup>
 
   <ItemGroup>
