Add module role template feature to Identity service
Introduces module role templates, enabling creation, update, deletion, listing, retrieval, and application of reusable module role bundles to users. Adds supporting endpoints, DTOs, domain models, value objects, specifications, repository wiring, and EF configuration. Updates dependencies and project references to support new functionality.

--- a/Services/AllSpice.CleanModularMonolith.Identity/AllSpice.CleanModularMonolith.Identity.csproj
+++ b/Services/AllSpice.CleanModularMonolith.Identity/AllSpice.CleanModularMonolith.Identity.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\AllSpice.CleanModularMonolith.Identity.Abstractions\AllSpice.CleanModularMonolith.Identity.Abstractions.csproj" />
     <ProjectReference Include="..\..\Shared\AllSpice.CleanModularMonolith.SharedKernel\AllSpice.CleanModularMonolith.SharedKernel.csproj" />
+    <ProjectReference Include="..\..\Shared\AllSpice.CleanModularMonolith.Web\AllSpice.CleanModularMonolith.Web.csproj" />
   </ItemGroup>
 
 </Project>
