Add ERP Portal Blazor project and integrate with AppHost
Introduces the AllSpice.CleanModularMonolith.ErpPortal Blazor project, including client and server components, layouts, pages, styles, and configuration files. Updates AppHost to reference and launch the new ERP Portal project, and modifies the solution and package properties to include it.

--- a/AllSpice.CleanModularMonolith.AppHost/AllSpice.CleanModularMonolith.AppHost.csproj
+++ b/AllSpice.CleanModularMonolith.AppHost/AllSpice.CleanModularMonolith.AppHost.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ApiGateway\AllSpice.CleanModularMonolith.ApiGateway.csproj" />
+    <ProjectReference Include="..\AllSpice.CleanModularMonolith.ErpPortal\AllSpice.CleanModularMonolith.ErpPortal\AllSpice.CleanModularMonolith.ErpPortal.csproj" />
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ServiceDefaults\AllSpice.CleanModularMonolith.ServiceDefaults.csproj">
       <IsAspireProjectResource>false</IsAspireProjectResource>
     </ProjectReference>
