Migrate identity provider from Authentik to Keycloak
Replaces Authentik integration with Keycloak across the solution, updating configuration, environment variables, service registration, health checks, and user sync jobs. Adds OpenIdConnect authentication to ERP portal and updates documentation to reflect Keycloak usage. Renames and refactors related classes, options, and endpoints to support Keycloak Admin API and OIDC flows.

--- a/AllSpice.CleanModularMonolith.ErpPortal/AllSpice.CleanModularMonolith.ErpPortal/AllSpice.CleanModularMonolith.ErpPortal.csproj
+++ b/AllSpice.CleanModularMonolith.ErpPortal/AllSpice.CleanModularMonolith.ErpPortal/AllSpice.CleanModularMonolith.ErpPortal.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\..\AllSpice.CleanModularMonolith.ServiceDefaults\AllSpice.CleanModularMonolith.ServiceDefaults.csproj" />
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ErpPortal.Client\AllSpice.CleanModularMonolith.ErpPortal.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"/>
   </ItemGroup>
 
 </Project>
