Add MainWebsite portal and improve Keycloak integration
Introduces the MainWebsite portal with Blazor components, authentication endpoints, and project files. Refactors Keycloak configuration to use dynamic endpoint references and realm values, updates environment variable handling, and enhances OIDC authentication setup for both ERP and MainWebsite portals. Also adds new parameters to appsettings and AppHost for flexible identity and email configuration.

--- a/AllSpice.CleanModularMonolith.AppHost/appsettings.json
+++ b/AllSpice.CleanModularMonolith.AppHost/appsettings.json
@@ -14,7 +14,18 @@
     "sinch-service-plan-id": "",
     "sinch-from-number": "",
     "keycloak-admin-user": "admin",
-    "keycloak-admin-password": "admin"
+    "keycloak-admin-password": "admin",
+    "keycloak-realm": "sadaqa",
+    "keycloak-api-token": "",
+    "keycloak-erp-client-secret": "",
+    "keycloak-mainwebsite-client-secret": "",
+    "entra-id-tenant-id": "",
+    "entra-id-client-id": "",
+    "entra-id-client-secret": "",
+    "smtp-username": "",
+    "smtp-password": "",
+    "email-from-address": "",
+    "email-reply-to-address": ""
   },
   "Cors": {
     "WebOrigin": "http://localhost:5173",
@@ -26,15 +37,13 @@
     "Portals": {
       "Erp": {
         "ClientId": "erp-portal",
-        "ClientSecret": "",
-        "Authority": "http://localhost:8080/realms/allspice",
+        "Authority": "http://localhost:8080/realms/sadaqa",
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath": "/signout-callback-oidc"
       },
       "MainWebsite": {
-        "ClientId": "main-website",
-        "ClientSecret": "",
-        "Authority": "http://localhost:8080/realms/allspice",
+        "ClientId": "sadaqa-public",
+        "Authority": "http://localhost:8080/realms/sadaqa",
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath": "/signout-callback-oidc"
       }
@@ -43,9 +52,6 @@
   "EntraId": {
     "Portals": {
       "Erp": {
-        "TenantId": "",
-        "ClientId": "",
-        "ClientSecret": "",
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath": "/signout-callback-oidc"
       }
@@ -54,8 +60,6 @@
   "Identity": {
     "Keycloak": {
       "BaseUrl": "http://localhost:8080",
-      "Realm": "allspice",
-      "ApiToken": "",
       "UserLookupTemplate": "/admin/realms/{realm}/users/{0}",
       "InvitationEndpoint": "/admin/realms/{realm}/users",
       "AllowUntrustedCertificates": false
@@ -75,17 +79,12 @@
         "FromNumber": ""
       },
       "Email": {
-        "FromAddress": "",
-        "ReplyToAddress": ""
       }
     },
     "Smtp": {
       "Host": "localhost",
       "Port": 1025,
       "UseSsl": false,
-      "Username": "",
-      "Password": "",
-      "FromAddress": "no-reply@AllSpice.CleanModularMonolith.local",
       "FromName": "AllSpice.CleanModularMonolith Notifications"
     },
     "Dispatcher": {
