--- a/AllSpice.CleanModularMonolith.AppHost/AllSpice.CleanModularMonolith.AppHost.csproj
+++ b/AllSpice.CleanModularMonolith.AppHost/AllSpice.CleanModularMonolith.AppHost.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ApiGateway\AllSpice.CleanModularMonolith.ApiGateway.csproj" />
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ErpPortal\AllSpice.CleanModularMonolith.ErpPortal\AllSpice.CleanModularMonolith.ErpPortal.csproj" />
+    <ProjectReference Include="..\AllSpice.CleanModularMonolith.MainWebsite\AllSpice.CleanModularMonolith.MainWebsite\AllSpice.CleanModularMonolith.MainWebsite.csproj" />
     <ProjectReference Include="..\AllSpice.CleanModularMonolith.ServiceDefaults\AllSpice.CleanModularMonolith.ServiceDefaults.csproj">
       <IsAspireProjectResource>false</IsAspireProjectResource>
     </ProjectReference>
