Replace hardcoded project identifiers with template variables
Updated code, configuration, and documentation to use {{ProjectName}} and {{ProjectNameLower}} template variables instead of hardcoded 'AllSpice.CleanModularMonolith' and related strings. This enables easier project scaffolding and customization when generating new solutions from the template.

--- a/AllSpice.CleanModularMonolith.ApiGateway/appsettings.json
+++ b/AllSpice.CleanModularMonolith.ApiGateway/appsettings.json
@@ -39,7 +39,7 @@
     ],
     "Enrich": ["FromLogContext", "WithEnvironmentName", "WithMachineName", "WithThreadId"],
     "Properties": {
-      "Application": "AllSpice.CleanModularMonolith.ApiGateway"
+      "Application": "{{ProjectName}}.ApiGateway"
     }
   },
   "AllowedHosts": "*",
@@ -76,7 +76,7 @@
       "bff-web-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://AllSpice.CleanModularMonolith-apigateway"
+            "Address": "http://{{ProjectNameLower}}-apigateway"
           }
         },
         "LoadBalancingPolicy": "RoundRobin",
@@ -92,7 +92,7 @@
       "bff-mobile-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://AllSpice.CleanModularMonolith-apigateway"
+            "Address": "http://{{ProjectNameLower}}-apigateway"
           }
         },
         "LoadBalancingPolicy": "RoundRobin",
