--- a/AllSpice.CleanModularMonolith.AppHost/appsettings.json
+++ b/AllSpice.CleanModularMonolith.AppHost/appsettings.json
@@ -15,7 +15,7 @@
     "sinch-from-number": "",
     "keycloak-admin-user": "admin",
     "keycloak-admin-password": "admin",
-    "keycloak-realm": "sadaqa",
+    "keycloak-realm": "{{ProjectNameLower}}",
     "keycloak-api-token": "",
     "keycloak-erp-client-secret": "",
     "keycloak-mainwebsite-client-secret": "",
@@ -33,17 +33,17 @@
   },
   "Keycloak": {
     "BaseUrl": "http://localhost:8080",
-    "Realm": "allspice",
+    "Realm": "{{ProjectNameLower}}",
     "Portals": {
       "Erp": {
         "ClientId": "erp-portal",
-        "Authority": "http://localhost:8080/realms/sadaqa",
+        "Authority": "http://localhost:8080/realms/{{ProjectNameLower}}",
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath": "/signout-callback-oidc"
       },
       "MainWebsite": {
-        "ClientId": "sadaqa-public",
-        "Authority": "http://localhost:8080/realms/sadaqa",
+        "ClientId": "{{ProjectNameLower}}-public",
+        "Authority": "http://localhost:8080/realms/{{ProjectNameLower}}",
         "CallbackPath": "/signin-oidc",
         "SignedOutCallbackPath": "/signout-callback-oidc"
       }
@@ -85,7 +85,7 @@
       "Host": "localhost",
       "Port": 1025,
       "UseSsl": false,
-      "FromName": "AllSpice.CleanModularMonolith Notifications"
+      "FromName": "{{ProjectName}} Notifications"
     },
     "Dispatcher": {
       "PollIntervalSeconds": 10
