--- a/AllSpice.CleanModularMonolith.ErpPortal/AllSpice.CleanModularMonolith.ErpPortal/Properties/launchSettings.json
+++ b/AllSpice.CleanModularMonolith.ErpPortal/AllSpice.CleanModularMonolith.ErpPortal/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "http://allspice_cleanmodularmonolith_erpportal.dev.localhost:5221",
+        "applicationUrl": "http://{{ProjectNameLower}}_erpportal.dev.localhost:5221",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -16,7 +16,7 @@
         "dotnetRunMessages": true,
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-        "applicationUrl": "https://allspice_cleanmodularmonolith_erpportal.dev.localhost:7284;http://allspice_cleanmodularmonolith_erpportal.dev.localhost:5221",
+        "applicationUrl": "https://{{ProjectNameLower}}_erpportal.dev.localhost:7284;http://{{ProjectNameLower}}_erpportal.dev.localhost:5221",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
