--- a/AllSpice.CleanModularMonolith.MainWebsite/AllSpice.CleanModularMonolith.MainWebsite/Properties/launchSettings.json
+++ b/AllSpice.CleanModularMonolith.MainWebsite/AllSpice.CleanModularMonolith.MainWebsite/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://allspice_cleanmodularmonolith_mainwebsite.dev.localhost:5222",
+      "applicationUrl": "http://{{ProjectNameLower}}_mainwebsite.dev.localhost:5222",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -16,7 +16,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://allspice_cleanmodularmonolith_mainwebsite.dev.localhost:7285;http://allspice_cleanmodularmonolith_mainwebsite.dev.localhost:5222",
+      "applicationUrl": "https://{{ProjectNameLower}}_mainwebsite.dev.localhost:7285;http://{{ProjectNameLower}}_mainwebsite.dev.localhost:5222",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
